--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -158,7 +158,7 @@
                         {{personage.name}}
                         <span class="ink animate"></span>
                     </a>
-                    <a class="btn btn-rounded btn-danger-outline margin-10" href="edit_personage.html?id={{personage.id}}">Изменить!</a>
+                    <a class="btn btn-rounded btn-danger-outline margin-10" href="edit_personage.html?id={{personage.id}}">Прокачать!</a>
                     <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
                         <a class="dropdown-item" href="javascript: void(0)">Раса: {{personage.Race.name}}</a>
                         <a class="dropdown-item" href="javascript: void(0)">Возраст: {{personage.age}} лет</a>
