--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -33,7 +33,7 @@
     <script src="personage_main_controller.js"></script>
     <script src="../permissions/check_player_permissions.js"></script>
 </head>
-<body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageApp">
+<body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageApp" ng-cloak>
 <div class="boxed-container" ng-controller="permissionsController">
     <div ng-controller="personageController">
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
