--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -35,7 +35,7 @@
     <script src="/views/permissions/check_player_permissions.js"></script>
 
 </head>
-<body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageApp">
+<body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageApp" ng-cloak>
 <div class="boxed-container" ng-controller="permissionsController">
     <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
         <div class="logo-container">
