--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -36,6 +36,7 @@
 
 </head>
 <body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageApp" ng-cloak>
+<div id="loader"></div>
 <div class="boxed-container" ng-controller="permissionsController">
     <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
         <div class="logo-container">
@@ -150,7 +151,7 @@
         </div>
     </nav>
 
-    <section class="page-content" ng-controller="personageController">
+    <section class="page-content hide" ng-controller="personageController">
         <div class="panel">
             <h3 class="panel-heading" style="padding-bottom: 0; margin-bottom: 0">
                 <div class="dropdown">
