--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -137,7 +137,7 @@
                 </div>
 
                 <div class="menu-user-block">
-                    <a class="menu-user-info-block nohover" style="hover: 0">
+                    <a class="menu-user-info-block nohover" href="javascript: void(0)" ng-click="editExperince()">
                         <span class="user-name">XP: <strong>{{personage.experience}}</strong></span>
                     </a>
                 </div>
