--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -794,7 +794,8 @@
                                 ng-hide="filteredAttachedSkills(item)"
                                 ng-class="addNotAddedClass(item.personageAttachedSkill)">
                                 <td class="text-right mobile attached"
-                                    ng-click="showHideDescription(item.attachedSkill)" style="cursor:pointer;width: 15%">
+                                    ng-click="showHideDescription(item.attachedSkill)"
+                                    style="cursor:pointer;width: 15%">
                                     <div class="text-left disable-select">
                                         <i ng-hide="isShowItem(item.attachedSkill.id)"
                                            class="icmn-circle-down2 margin-inline"></i>
@@ -880,6 +881,17 @@
                                 <td colspan="6">
                                     <strong class="padding-left-10">Описание:</strong>
                                     {{item.attachedSkill.description}}
+                                </td>
+                            </tr>
+                            <tr ng-show="isShowItem(item.attachedSkill.id)"
+                                ng-class="addNotAddedClass(item.personageAttachedSkill)">
+                                <td colspan="6">
+                                    <strong class="padding-left-10">Броски:</strong>
+                                    <div ng-repeat="attachedSkillAttribute in item.attachedSkill.AttachedSkillAttributes">
+                                        {{attachedSkillAttribute.description}}:
+                                        {{attachedSkillAttribute.Attribute.name}}+{{item.attachedSkill.name}}<span ng-show="getPersonageAttributeValue(item.personageAttachedSkill, attachedSkillAttribute.Attribute)">={{attributeValue+item.personageAttachedSkill.value}}
+                                    </span>
+                                    </div>
                                 </td>
                             </tr>
                             </tbody>
