--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -418,11 +418,13 @@
                                         Прикрепленные навыки
                                     </h3>
                                     <div class="panel-body">
-                                        <table id="attachedSkills" class="table" width="100%" cellspacing="0">
+                                        <table id="attachedSkills" class="table nowrap" width="100%" cellspacing="0">
                                             <thead>
                                             <tr>
                                                 <th>Навык</th>
                                                 <th>Значение</th>
+                                                <th>Броски</th>
+                                                <th>Описание</th>
                                             </tr>
                                             </thead>
                                         </table>
@@ -434,12 +436,13 @@
                                         Тригерные навыки
                                     </h3>
                                     <div class="panel-body">
-                                        <table id="triggerSkills" class="table" width="100%" cellspacing="0">
+                                        <table id="triggerSkills" class="table nowrap" width="100%" cellspacing="0">
                                             <thead>
                                             <tr>
                                                 <th>Навык</th>
                                                 <th>Уровень</th>
                                                 <th>Талант</th>
+                                                <th>Описание</th>
                                             </tr>
                                             </thead>
                                         </table>
@@ -451,11 +454,12 @@
                                         Врожденные особенности
                                     </h3>
                                     <div class="panel-body">
-                                        <table id="inherents" class="table" width="100%" cellspacing="0">
+                                        <table id="inherents" class="table nowrap" width="100%" cellspacing="0">
                                             <thead>
                                             <tr>
                                                 <th>Особенность</th>
                                                 <th>Значение</th>
+                                                <th>Описание</th>
                                             </tr>
                                             </thead>
                                         </table>
@@ -467,10 +471,11 @@
                                         Достоинства
                                     </h3>
                                     <div class="panel-body">
-                                        <table id="merits" class="table" width="100%" cellspacing="0">
+                                        <table id="merits" class="table nowrap" width="100%" cellspacing="0">
                                             <thead>
                                             <tr>
                                                 <th>Достоинство</th>
+                                                <th>Описание</th>
                                             </tr>
                                             </thead>
                                         </table>
@@ -482,10 +487,11 @@
                                         Недостатки
                                     </h3>
                                     <div class="panel-body">
-                                        <table id="flaws" class="table" width="100%" cellspacing="0">
+                                        <table id="flaws" class="table table-hover nowrap" width="100%" cellspacing="0">
                                             <thead>
                                             <tr>
                                                 <th>Недостаток</th>
+                                                <th>Описание</th>
                                             </tr>
                                             </thead>
                                         </table>
